<resources>
    <string name="app_name">Vtop Academy</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="code">Code</string>
    <string name="enter_the_code_sent_to_your_email">Enter the code sent to your email</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="forgot_password_2">Forgot password?</string>
</resources>